some dark mode fixes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,15 +1,15 @@
 * {
-  @apply text-slate-900 dark:text-slate-300;
+  @apply text-slate-900 dark:text-slate-200;
   font-display: "fallback";
 }
 
 body {
-  @apply bg-slate-100 dark:bg-zinc-950 overflow-x-hidden;
+  @apply bg-slate-100 dark:bg-stone-900 overflow-x-hidden;
   font-family: "Space Grotesk", "Arial", "Helvetica", "sans-serif";
 }
 
 main {
-  @apply bg-slate-100 dark:bg-zinc-950;
+  @apply bg-slate-100 dark:bg-zinc-900;
 }
 
 @media (prefers-contrast: more) {
@@ -27,7 +27,7 @@ main {
 }
 
 a {
-  @apply inline-block p-6 text-lg transition-all focus:bg-yellow-400 md:p-4 focus:outline-none;
+  @apply inline-block p-6 text-lg transition-all focus:bg-yellow-400 md:p-4 focus:outline-none dark:focus:text-slate-900;
 }
 
 a[target="_blank"]:hover {
@@ -42,7 +42,7 @@ img {
 }
 
 #markdown-content .container pre {
-  @apply max-w-5xl m-auto mb-36 py-4 px-3 md:px-6 mx-6 md:mx-auto shadow-xl rounded-3xl text-xs md:text-base;
+  @apply max-w-5xl m-auto mb-36 py-4 px-3 md:px-6 mx-6 md:mx-auto shadow-xl dark:shadow-md rounded-3xl text-xs md:text-base;
 }
 
 #markdown-content .container > blockquote {
